--- a/src/com/Aguarde.form
+++ b/src/com/Aguarde.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -91,7 +91,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/com/img/homer x ray.jpg"/>
+                  <Image iconType="3" name="/com/img/capa.jpg"/>
                 </Property>
               </Properties>
               <Constraints>
