--- a/src/com/JMini.form
+++ b/src/com/JMini.form
@@ -539,7 +539,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jPanel6" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="15" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -553,11 +553,7 @@
                       <Group type="102" attributes="0">
                           <EmptySpace min="5" pref="5" max="5" attributes="0"/>
                           <Component id="jLabelNomeMusica" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                          <Component id="jLabelNomeMusicaMask" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="jLabelNomeMusicaSombra" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="22" max="32767" attributes="0"/>
+                          <EmptySpace pref="223" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -565,11 +561,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace min="5" pref="5" max="5" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jLabelNomeMusica" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabelNomeMusicaMask" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="jLabelNomeMusicaSombra" alignment="3" min="-2" pref="17" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="jLabelNomeMusica" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -581,24 +573,6 @@
                       <Font name="DejaVu Sans" size="11" style="0"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="jLabel2"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JLabel" name="jLabelNomeMusicaMask">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="DejaVu Sans" size="11" style="0"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="jLabel2"/>
-                  </Properties>
-                </Component>
-                <Component class="javax.swing.JLabel" name="jLabelNomeMusicaSombra">
-                  <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="DejaVu Sans" size="11" style="0"/>
-                    </Property>
-                    <Property name="text" type="java.lang.String" value="Um nome bem grande"/>
-                    <Property name="focusable" type="boolean" value="false"/>
-                    <Property name="horizontalTextPosition" type="int" value="2"/>
                   </Properties>
                 </Component>
               </SubComponents>
